# AITranslation

./: .env  .prettierrc.yaml  My_Translator-v2.0.spec  pyproject.toml
backend/: X1_http.py  X1_ws.py
code/: My_Translator-v2.0.py  X1_http.py
code/bilibili/: bilibili_download.py  bilibili_gui.py  main.py  mg.py  style.qss
frontend/: My_translator.py  Translator.py  about_author.py  language_select.py  translate_ui.py
test/: Baidu_Text_transAPI.py  Chat_AI.py  My_Translator-v2.0.py  Translator.py  X1_http.py
yky/: Translator.py  main.py  savemain.py  test.py
