[project]
name = "bigfy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
  "PyQt5",
  "requests",
  "pyperclip>=1.9.0",
  "websocket-client",

  "flask>=3.1.1",
  "pyqt5>=5.15.11",
  "python-dotenv>=1.1.0",
  "bilibili-api-python==17.2.1",
  "aiohttp>=3.12.1",
  "python-dotenv==1.1.1",
  "qasync>=0.27.1",
]

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
